fixed border wrapping

--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@ html{
 }
 #board {
 	width:500px;
-	height:550px;
+	height:500px;
 	border-top:5px solid #949494;
     border-left:5px solid #949494;
     border-bottom:5px solid #FBFAF9;
     border-right:5px solid #FBFAF9;
     margin-left: 10px;
+}
+#bottomDiv{
+    width:500px;
+	height:50px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 .square {
 	width:40px;
